# internal/app/model/note.go
@@ -1,9 +1,20 @@
 package model
 
-import "database/sql"
+import (
+	"database/sql"
+	"time"
+)
 
-type NoteInfo struct {
+type UpdateNoteInfo struct {
 	Id      int64          `db:"id"`
 	Title   sql.NullString `db:"title"`
 	Content sql.NullString `db:"content"`
+}
+
+type NoteInfo struct {
+	Id        int64     `db:"id"`
+	Title     string    `db:"title"`
+	Content   string    `db:"content"`
+	CreatedAt time.Time `db:"created_at"`
+	UpdatedAt sql.NullTime `db:"updated_at"`
 }
